package PAI.factory;

import PAI.domain.StudentGrade;

import java.util.List;

public interface IStudentGradeListFactory {
    List<StudentGrade> newArrayList ();
}
