package PAI.factory;

import PAI.VOs.*;
import PAI.ddd.IRepository;
import PAI.domain.StudentGrade;

public interface IStudentGradeRepository extends IRepository<StudentGradeID, StudentGrade> {
//    boolean addGradeToStudent (Grade grade, Date date, StudentID student, CourseEditionID courseEditionID) throws Exception;
//    Double getAverageGrade(CourseEditionID courseEditionID);
//    double knowApprovalRate(CourseEditionID courseEditionID);


}

